# Clipped

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
Communication/: CMakeLists.txt
Communication/include/ClippedCommunication/: cIODevice.h  cMultimeterHP34401A.h  cSerialPort.h  cSerialPortInterface.h  cSerialPortLinux.h  cSerialPortWindows.h  cSocket.h  cSocketInterface.h  cSocketLinux.h
Communication/src/: cMultimeterHP34401A.cpp  cSerialPortLinux.cpp  cSerialPortWindows.cpp  cSocketInterface.cpp  cSocketLinux.cpp  cSocketWindows.cpp
Communication/tests/: CMakeLists.txt  testSocket.cpp
DataStreams/: CMakeLists.txt
DataStreams/include/ClippedDataStreams/: cBinStream.h
DataStreams/src/: cBinStream.cpp
ECS/: CMakeLists.txt
ECS/include/ClippedECS/: cComponentManager.h  cEntityManager.h  cEventManager.h
ECS/src/: cEntityManager.cpp  cEventManager.cpp
Environment/: CMakeLists.txt
Environment/include/ClippedEnvironment/: cSystem.h  cThread.h
Environment/src/: cSystem.cpp  cThread.cpp
Environment/tests/: CMakeLists.txt  testThread.cpp
Filesystem/: CMakeLists.txt
Filesystem/include/ClippedFilesystem/: cBinFile.h  cConfigFile.h  cExplorer.h  cFile.h  cFileManager.h  cIArchiver.h  cTextFile.h
Filesystem/include/ClippedFilesystem/Archives/: cVdfsArchive.h  cVdfsFile.h
Filesystem/src/: cBinFile.cpp  cConfigFile.cpp  cExplorer.cpp  cFile.cpp  cFileManager.cpp  cIArchiver.cpp  cTextFile.cpp
Filesystem/src/Archives/: cVdfsArchive.cpp  cVdfsFile.cpp
Filesystem/tests/: CMakeLists.txt  extractTest.vdfs  testExplorer.cpp  testVdfsCreate.cpp  testVdfsRead.cpp
Maths/: CMakeLists.txt
Maths/include/ClippedMaths/: cCRC.h  cFormat.h  cMath.h
Maths/src/: cCRC.cpp  cMath.cpp
Maths/tests/: CMakeLists.txt  crc8_test.cpp  crc_test.cpp
Utils/: CMakeLists.txt  README.md
Utils/include/ClippedUtils/: cLogger.h  cMemory.h  cOsDetect.h  cPath.h  cString.h  cTime.h
Utils/include/ClippedUtils/Allocators/: cBlockAllocator.h  cStdHeapAllocator.h
Utils/include/ClippedUtils/DataStructures/: cBspTree.h  cTree.h
Utils/src/: cPath.cpp  cString.cpp  cTime.cpp  uPath.cpp  uString.cpp
Utils/tests/: CMakeLists.txt
